--- a/OrganWeb/OrganWeb/Web.config
+++ b/OrganWeb/OrganWeb/Web.config
@@ -20,9 +20,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="loginUrl" value="~/Account/LoginRegistro" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
