--- a/OrganWeb/OrganWeb/Web.config
+++ b/OrganWeb/OrganWeb/Web.config
@@ -26,6 +26,7 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="pt-br"/>
   </system.web>
   <system.webServer>
     <modules>
