--- a/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
+++ b/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
@@ -105,15 +105,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
+  <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
     <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
-    <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">-->
-    <!--<parameters>
-        <parameter value="mssqllocaldb"/>
-      </parameters>-->
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <system.codedom>
