Organização das pastas

--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -218,44 +218,43 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Areas\Sistema\Controllers\ControleController.cs" />
     <Compile Include="Areas\Sistema\Controllers\DoencasController.cs" />
     <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FazendaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FornecedorController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FuncionarioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ItemController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\ManutencaoController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PlantioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\VwItemsController.cs" />
-    <Compile Include="Areas\Sistema\Models\Cargo.cs" />
-    <Compile Include="Areas\Sistema\Models\Categoria.cs" />
-    <Compile Include="Areas\Sistema\Models\Colheita.cs" />
-    <Compile Include="Areas\Sistema\Models\Controle.cs" />
-    <Compile Include="Areas\Sistema\Models\Cultura.cs" />
-    <Compile Include="Areas\Sistema\Models\Despesa.cs" />
-    <Compile Include="Areas\Sistema\Models\Doenca.cs" />
-    <Compile Include="Areas\Sistema\Models\Equipe.cs" />
-    <Compile Include="Areas\Sistema\Models\Especificacao.cs" />
-    <Compile Include="Areas\Sistema\Models\Estadio.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Fazenda.cs" />
-    <Compile Include="Areas\Sistema\Models\Fornecedor.cs" />
-    <Compile Include="Areas\Sistema\Models\Funcionario.cs" />
-    <Compile Include="Areas\Sistema\Models\HistoricoEstoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Item.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewEstoque.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewFazenda.cs" />
-    <Compile Include="Areas\Sistema\Models\VwItems.cs" />
+    <Compile Include="Areas\Sistema\Models\Funcionarios\Cargo.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque\Categoria.cs" />
+    <Compile Include="Areas\Sistema\Models\Safras\Colheita.cs" />
+    <Compile Include="Areas\Sistema\Models\Controles\Controle.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\Despesa.cs" />
+    <Compile Include="Areas\Sistema\Models\Controles\Doenca.cs" />
+    <Compile Include="Areas\Sistema\Models\Funcionarios\Equipe.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\EstocaCompra.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque\Estoque.cs" />
+    <Compile Include="Areas\Sistema\Models\Administrativo\Fazenda.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque\Fornecedor.cs" />
+    <Compile Include="Areas\Sistema\Models\Funcionarios\Funcionario.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque\HistoricoEstoque.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque\Item.cs" />
+    <Compile Include="Areas\Sistema\Models\zRepositories\PlantioRepository.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\ViewEstoque.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\ViewPlantio.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\VwItems.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\Compra.cs" />
     <Compile Include="Models\Localizacao.cs" />
-    <Compile Include="Areas\Sistema\Models\Manutencao.cs" />
-    <Compile Include="Areas\Sistema\Models\Monitoramento.cs" />
-    <Compile Include="Areas\Sistema\Models\Maquina.cs" />
-    <Compile Include="Areas\Sistema\Models\Plantio.cs" />
-    <Compile Include="Areas\Sistema\Models\Praga.cs" />
-    <Compile Include="Areas\Sistema\Models\Semente.cs" />
-    <Compile Include="Areas\Sistema\Models\Solo.cs" />
-    <Compile Include="Areas\Sistema\Models\Tarefa.cs" />
-    <Compile Include="Areas\Sistema\Models\Area.cs" />
+    <Compile Include="Areas\Sistema\Models\Ferramentas\Manutencao.cs" />
+    <Compile Include="Areas\Sistema\Models\Ferramentas\Maquina.cs" />
+    <Compile Include="Areas\Sistema\Models\Safras\Plantio.cs" />
+    <Compile Include="Areas\Sistema\Models\Controles\Praga.cs" />
+    <Compile Include="Areas\Sistema\Models\Safras\Semente.cs" />
+    <Compile Include="Areas\Sistema\Models\Administrativo\Solo.cs" />
+    <Compile Include="Areas\Sistema\Models\Funcionarios\Tarefa.cs" />
+    <Compile Include="Areas\Sistema\Models\Administrativo\Area.cs" />
     <Compile Include="Areas\Sistema\SistemaAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -329,6 +328,8 @@
     <Content Include="Areas\Sistema\Views\Estoque\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Estoque\_NovoItem.cshtml" />
     <Content Include="Areas\Sistema\Views\Plantio\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Plantio\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencao\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
