--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -337,6 +337,7 @@
     <Content Include="Areas\Sistema\Views\Plantio\_NovoPlantio.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\_NovaManutencao.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencao\Editar.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
