--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -262,7 +262,6 @@
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewPlantio.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\VwItems.cs" />
     <Compile Include="Areas\Sistema\Models\Financas\Compra.cs" />
-    <Compile Include="Models\Localizacao.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Manutencao.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Maquina.cs" />
     <Compile Include="Areas\Sistema\Models\Safras\Plantio.cs" />
@@ -278,13 +277,24 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\BancoContext.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Pagamento.cs" />
-    <Compile Include="Models\Repository.cs" />
-    <Compile Include="Models\Telefone.cs" />
-    <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\Financeiro\DadosBancarios.cs" />
+    <Compile Include="Models\Pessoa\PessoaFisica.cs" />
+    <Compile Include="Models\Usuario\AccountViewModels.cs" />
+    <Compile Include="Models\Banco\BancoContext.cs" />
+    <Compile Include="Models\Endereco\Bairro.cs" />
+    <Compile Include="Models\Endereco\Cidade.cs" />
+    <Compile Include="Models\Endereco\Endereco.cs" />
+    <Compile Include="Models\Endereco\Estado.cs" />
+    <Compile Include="Models\Endereco\Logradouro.cs" />
+    <Compile Include="Models\Usuario\ManageViewModels.cs" />
+    <Compile Include="Models\Financeiro\Pagamento.cs" />
+    <Compile Include="Models\Pessoa\Pessoa.cs" />
+    <Compile Include="Models\Pessoa\TelefonePessoa.cs" />
+    <Compile Include="Models\Banco\Repository.cs" />
+    <Compile Include="Models\Telefone\DDD.cs" />
+    <Compile Include="Models\Telefone\Telefone.cs" />
+    <Compile Include="Models\Telefone\TipoTel.cs" />
+    <Compile Include="Models\Usuario\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Startup.cs" />
