--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -229,27 +229,30 @@
     <Compile Include="Areas\Ecommerce\Models\Wishlist.cs" />
     <Compile Include="Areas\Sistema\Controllers\DoencasController.cs" />
     <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
-    <Compile Include="Areas\Sistema\Controllers\FazendaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FornecedorController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FuncionarioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ItemController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ManutencaoController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PlantioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\VwItemsController.cs" />
+    <Compile Include="Areas\Sistema\Models\Administrativo\Cliente.cs" />
+    <Compile Include="Areas\Sistema\Models\Armazenamento\Insumo.cs" />
+    <Compile Include="Areas\Sistema\Models\Ferramentas\MaquinaManutencao.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\Conta.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\DespesaAdm.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\DespesaFunc.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\ItensComprados.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\ItensVendidos.cs" />
+    <Compile Include="Areas\Sistema\Models\Financas\Venda.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionarios\Cargo.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque\Categoria.cs" />
-    <Compile Include="Areas\Sistema\Models\Safras\Colheita.cs" />
-    <Compile Include="Areas\Sistema\Models\Controles\Controle.cs" />
+    <Compile Include="Areas\Sistema\Models\Armazenamento\Categoria.cs" />
+    <Compile Include="Areas\Sistema\Models\Funcionarios\FuncEquipe.cs" />
     <Compile Include="Areas\Sistema\Models\Financas\Despesa.cs" />
-    <Compile Include="Areas\Sistema\Models\Controles\Doenca.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionarios\Equipe.cs" />
-    <Compile Include="Areas\Sistema\Models\Financas\EstocaCompra.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque\Estoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Administrativo\Fazenda.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque\Fornecedor.cs" />
+    <Compile Include="Areas\Sistema\Models\Armazenamento\Estoque.cs" />
+    <Compile Include="Areas\Sistema\Models\Armazenamento\Fornecedor.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionarios\Funcionario.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque\HistoricoEstoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Estoque\Item.cs" />
+    <Compile Include="Areas\Sistema\Models\Armazenamento\HistoricoEstoque.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewMaquina.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewSementes.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewFornecedor.cs" />
@@ -264,12 +267,8 @@
     <Compile Include="Areas\Sistema\Models\Financas\Compra.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Manutencao.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Maquina.cs" />
-    <Compile Include="Areas\Sistema\Models\Safras\Plantio.cs" />
-    <Compile Include="Areas\Sistema\Models\Controles\Praga.cs" />
     <Compile Include="Areas\Sistema\Models\Safras\Semente.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Solo.cs" />
-    <Compile Include="Areas\Sistema\Models\Funcionarios\Tarefa.cs" />
-    <Compile Include="Areas\Sistema\Models\Administrativo\Area.cs" />
     <Compile Include="Areas\Sistema\SistemaAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -277,8 +276,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Financeiro\DadosBancarios.cs" />
+    <Compile Include="Models\Financeiro\DadosBancario.cs" />
     <Compile Include="Models\Pessoa\PessoaFisica.cs" />
+    <Compile Include="Models\Pessoa\PessoaJuridica.cs" />
+    <Compile Include="Models\Pessoa\PessoaUsuario.cs" />
     <Compile Include="Models\Usuario\AccountViewModels.cs" />
     <Compile Include="Models\Banco\BancoContext.cs" />
     <Compile Include="Models\Endereco\Bairro.cs" />
@@ -492,6 +493,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Ecommerce\Views\Shared\" />
+    <Folder Include="Areas\Sistema\Models\Controles\" />
     <Folder Include="Areas\Sistema\Views\Controles\" />
     <Folder Include="Areas\Sistema\Views\Shared\" />
   </ItemGroup>
