--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -387,6 +387,8 @@
     <Content Include="Areas\Sistema\Views\Estoque\Fornecedores.cshtml" />
     <Content Include="Areas\Sistema\Views\Plantio\Sementes.cshtml" />
     <Content Include="Areas\Sistema\Views\Doencas\PragaDoenca.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencao\Maquinas.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Funcionario.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
