--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -520,6 +520,7 @@
     <Content Include="Views\Shared\_LoginStart.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Registro.cshtml" />
+    <Content Include="Views\Account\Assinatura.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
