Create plantio multiselectlist, arrumada pastas semente, maquina

--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -229,11 +229,14 @@
     <Compile Include="Areas\Ecommerce\Models\Wishlist.cs" />
     <Compile Include="Areas\Sistema\Controllers\DoencasController.cs" />
     <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\FinanceiroController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FornecedorController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FuncionarioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ItemController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ManutencaoController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\MaquinaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PlantioController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
     <Compile Include="Areas\Sistema\Controllers\VwItemsController.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Area.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Cliente.cs" />
@@ -414,11 +417,11 @@
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="Areas\Sistema\Views\Fazenda\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\VwItems\Index.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\Create.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\Delete.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\Details.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\Edit.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Fazenda\_NovoFuncionario.cshtml" />
     <Content Include="Areas\Sistema\Views\Estoque\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Estoque\_NovoItem.cshtml" />
@@ -426,20 +429,21 @@
     <Content Include="Areas\Sistema\Views\Plantio\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\Detalhes.cshtml" />
-    <Content Include="Areas\Sistema\Views\Plantio\_NovoPlantio.cshtml" />
+    <Content Include="Areas\Sistema\Views\Plantio\Create.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\_NovaManutencao.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\Excluir.cshtml" />
     <Content Include="Areas\Sistema\Views\Manutencao\Editar.cshtml" />
     <Content Include="Areas\Sistema\Views\Estoque\Fornecedores.cshtml" />
-    <Content Include="Areas\Sistema\Views\Plantio\Sementes.cshtml" />
-    <Content Include="Areas\Sistema\Views\Doencas\PragaDoenca.cshtml" />
+    <Content Include="Areas\Sistema\Views\Semente\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\PragaDoenca.cshtml" />
     <Content Include="Areas\Ecommerce\Views\web.config" />
     <Content Include="Areas\Ecommerce\Views\Loja\Detalhes.cshtml" />
     <Content Include="Areas\Ecommerce\Views\Loja\Index.cshtml" />
-    <Content Include="Areas\Sistema\Views\Manutencao\Maquinas.cshtml" />
+    <Content Include="Areas\Sistema\Views\Maquina\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Funcionario\Funcionario.cshtml" />
     <Content Include="Areas\Sistema\Views\Funcionario\Equipe.cshtml" />
     <Content Include="Areas\Sistema\Views\Funcionario\NovaEquipe.cshtml" />
+    <Content Include="Areas\Sistema\Views\Financeiro\Compras.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
